@@ -1,4 +1,5 @@
 libece 0.2a (DD/MM/YYYY):
+	- contrib: produce.sh - basic keygen + csr tool
 	- test/sb += double-CA/SNI test case
 	- SB Json error logging
 	- SB API: POST plain string parameters instead of Json
